--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -3,297 +3,275 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieVerse API</title>
+    <title>MovieVerse Admin Panel</title>
     <style>
+        /* Styles */
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        button, input, textarea {
-            margin: 10px;
-            padding: 10px;
-            font-size: 16px;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
         }
         h1, h2 {
-            color: #333;
+            text-align: center;
         }
-        form {
-            display: inline-block;
-            margin: 20px auto;
-            text-align: left;
+        .container {
             padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px #ddd;
+        }
+        .form-group {
+            margin-bottom: 15px;
         }
         label {
             display: block;
-            margin: 10px 0 5px;
+            margin-bottom: 5px;
             font-weight: bold;
         }
-        #response-container {
-            margin: 20px auto;
-            max-width: 80%;
-            overflow-x: auto;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px #ddd;
-            padding: 10px;
+        input, textarea, select {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
         }
-        #response-table {
+        button {
+            padding: 10px 20px;
+            color: #fff;
+            background-color: #5cb85c;
+            border: none;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button:hover {
+            background-color: #4cae4c;
+        }
+        .movie-list {
+            margin-top: 30px;
+        }
+        .pagination-controls {
+            text-align: center;
+            margin-top: 20px;
+        }
+        table {
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
+            background-color: #fff;
         }
-        #response-table th, #response-table td {
-            border: 1px solid #ddd;
-            padding: 8px;
+        th, td {
+            padding: 10px;
             text-align: left;
+            border-bottom: 1px solid #ddd;
         }
-        #response-table th {
-            background-color: #f4f4f4;
-            font-weight: bold;
-        }
-        #response-table tr:nth-child(even) {
-            background-color: #f9f9f9;
+        th {
+            background-color: #f2f2f2;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-<h1>MovieVerse API Operations</h1>
+<h1>MovieVerse Admin Panel</h1>
+<div class="container">
+    <!-- Filter Section -->
+    <div class="filter-section">
+        <h2>Filter Movies</h2>
+        <div class="form-group">
+            <label>Genres</label>
+            <select id="filter-genres">
+                <option value="all" selected>All Genres</option>
+                <option value="Action">Action</option>
+                <option value="Adventure">Adventure</option>
+                <option value="Animation">Animation</option>
+                <option value="Comedy">Comedy</option>
+                <option value="Crime">Crime</option>
+                <option value="Drama">Drama</option>
+                <option value="History">History</option>
+                <option value="Mystery">Mystery</option>
+                <option value="Romance">Romance</option>
+                <option value="Sci-Fi">Sci-Fi</option>
+                <option value="Thriller">Thriller</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Country</label>
+            <select id="filter-country">
+                <option value="all" selected>All Countries</option>
+                <option value="France">France</option>
+                <option value="Japan">Japan</option>
+                <option value="India">India</option>
+                <option value="New Zealand">New Zealand</option>
+                <option value="South Korea">South Korea</option>
+                <option value="USA">USA</option>
+                <option value="UK">UK</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="filter-year-min">Release Year (From)</label>
+            <input type="number" id="filter-year-min" value="1997" min="1997" max="2024">
+        </div>
+        <div class="form-group">
+            <label for="filter-year-max">Release Year (To)</label>
+            <input type="number" id="filter-year-max" value="2024" min="1997" max="2024">
+        </div>
+        <button onclick="applyFilters()">Apply Filters</button>
+    </div>
 
-<h2>Movies</h2>
-
-<h2>Response</h2>
-<div id="response-container">
-    <table id="response-table">
-        <tbody id="response-body"></tbody>
-    </table>
+    <!-- Movie List -->
+    <div class="movie-list">
+        <h2>All Movies</h2>
+        <button onclick="getAllMovies()">Get All Movies</button>
+        <table id="movie-table" style="display: none;">
+            <thead>
+            <tr>
+                <th onclick="sortMovies('id')">ID</th>
+                <th onclick="sortMovies('title')">Title</th>
+                <th onclick="sortMovies('director')">Director</th>
+                <th onclick="sortMovies('country')">Country</th>
+                <th onclick="sortMovies('genres')">Genres</th>
+                <th onclick="sortMovies('release_year')">Release Year</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tbody id="response-body"></tbody>
+        </table>
+        <div class="pagination-controls">
+            <button id="previous-button" onclick="previousPage()">Previous</button>
+            <span id="pagination-info">Page 1 of 0</span>
+            <button id="next-button" onclick="nextPage()">Next</button>
+        </div>
+    </div>
 </div>
-<pre id="response"></pre>
-<button onclick="getMovies()">Get All Movies</button>
-
-<h3>Get Movie by ID</h3>
-<form id="getMovieByIDForm" onsubmit="getMovieByID(event)">
-    <label for="movieID">Movie ID:</label>
-    <input type="text" id="movieID" name="movieID" required>
-    <button type="submit">Get Movie</button>
-</form>
-
-<h3>Delete Movie</h3>
-<form id="deleteMovieForm" onsubmit="deleteMovie(event)">
-    <label for="deleteMovieID">Movie ID:</label>
-    <input type="text" id="deleteMovieID" name="deleteMovieID" required>
-    <button type="submit">Delete Movie</button>
-</form>
-
-<h3>Update Movie</h3>
-<form id="updateMovieForm" onsubmit="updateMovie(event)">
-    <label for="updateMovieID">Movie ID:</label>
-    <input type="text" id="updateMovieID" name="movieID" required>
-
-    <label for="title">Title:</label>
-    <input type="text" id="updateTitle" name="title">
-
-    <label for="director">Director:</label>
-    <input type="text" id="updateDirector" name="director">
-
-    <label for="country">Country:</label>
-    <input type="text" id="updateCountry" name="country">
-
-    <label for="genres">Genres (comma-separated):</label>
-    <input type="text" id="updateGenres" name="genres">
-
-    <label for="releaseYear">Release Year:</label>
-    <input type="number" id="updateReleaseYear" name="releaseYear">
-
-    <label for="description">Description:</label>
-    <textarea id="updateDescription" name="description" rows="3"></textarea>
-
-    <button type="submit">Update Movie</button>
-</form>
-
-
-<h3>Create Movie</h3>
-<form id="createMovieForm" onsubmit="createMovie(event)">
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required>
-
-    <label for="director">Director:</label>
-    <input type="text" id="director" name="director" required>
-
-    <label for="country">Country:</label>
-    <input type="text" id="country" name="country" required>
-
-    <label for="genres">Genres (comma-separated):</label>
-    <input type="text" id="genres" name="genres" required>
-
-    <label for="releaseYear">Release Year:</label>
-    <input type="number" id="releaseYear" name="releaseYear" required>
-
-    <label for="description">Description:</label>
-    <textarea id="description" name="description" rows="3" required></textarea>
-
-    <button type="submit">Create Movie</button>
-</form>
-
-<h2>Users</h2>
-
-<button onclick="getAllUsers()">Get All Users</button>
-
-<h3>Get User by ID</h3>
-<form id="getUserByIDForm" onsubmit="getUserByID(event)">
-    <label for="userID">User ID:</label>
-    <input type="text" id="userID" name="userID" required>
-    <button type="submit">Get User</button>
-</form>
-
-<h3>Delete User</h3>
-<form id="deleteUserForm" onsubmit="deleteUser(event)">
-    <label for="deleteUserID">User ID:</label>
-    <input type="text" id="deleteUserID" name="deleteUserID" required>
-    <button type="submit">Delete User</button>
-</form>
-
-
-
 <script>
     const apiUrl = 'http://localhost:8080';
+    let currentPage = 1;
+    let totalPages = 0;
+    const limit = 10;
+    let sortField = '';
+    let sortOrder = 'asc';
+    let activeFilters = {};  // Object to store active filters
 
-    const showResponse = (response) => {
-        const responseBody = document.getElementById('response-body');
-        responseBody.innerHTML = "";
+    function getAllMovies(page = 1, filters = {}) {
+        let filterQuery = '';
 
-        if (Array.isArray(response)) {
-
-            const headerRow = document.createElement('tr');
-            if (response.length > 0) {
-                const firstItem = response[0];
-                for (const key in firstItem) {
-                    const th = document.createElement('th');
-                    th.textContent = key;
-                    headerRow.appendChild(th);
-                }
-                responseBody.appendChild(headerRow);
-
-                response.forEach(item => {
-                    const row = document.createElement('tr');
-                    for (const key in item) {
-                        const cell = document.createElement('td');
-                        const value = Array.isArray(item[key]) ? item[key].join(", ") : item[key];
-                        cell.textContent = value;
-                        row.appendChild(cell);
-                    }
-                    responseBody.appendChild(row);
-                });
-            }
-        } else {
-            const headerRow = document.createElement('tr');
-            for (const key in response) {
-                const th = document.createElement('th');
-                th.textContent = key;
-                headerRow.appendChild(th);
-            }
-            responseBody.appendChild(headerRow);
-
-            const row = document.createElement('tr');
-            for (const key in response) {
-                const cell = document.createElement('td');
-                const value = Array.isArray(response[key]) ? response[key].join(", ") : response[key];
-                cell.textContent = value;
-                row.appendChild(cell);
-            }
-            responseBody.appendChild(row);
+        // Check if there are filters for genres, year, and country, and append to the filterQuery
+        if (filters.genres && filters.genres.length > 0) {
+            filterQuery += `&genres=${JSON.stringify(filters.genres)}`;  // Send genres as a JSON array
         }
-    };
-    function updateMovie(event) {
-        event.preventDefault();
+        if (filters.country && filters.country !== 'all') {
+            filterQuery += `&country=${filters.country}`;
+        }
+        if (filters.yearMin) {
+            filterQuery += `&yearMin=${filters.yearMin}`;
+        }
+        if (filters.yearMax) {
+            filterQuery += `&yearMax=${filters.yearMax}`;
+        }
+        if (filters.sort) {
+            filterQuery += `&sort=${filters.sort}`;
+        }
+        if (filters.order) {
+            filterQuery += `&order=${filters.order}`;
+        }
 
-        const movieID = document.getElementById("updateMovieID").value;
-        const formData = {
-            title: document.getElementById("updateTitle").value || null,
-            director: document.getElementById("updateDirector").value || null,
-            country: document.getElementById("updateCountry").value || null,
-            genres: document.getElementById("updateGenres").value ? document.getElementById("updateGenres").value.split(",") : null,
-            releaseYear: document.getElementById("updateReleaseYear").value ? parseInt(document.getElementById("updateReleaseYear").value) : null,
-            description: document.getElementById("updateDescription").value || null,
+        // Fetch movies with the specified filters
+        fetch(`${apiUrl}/movies?page=${page}&limit=${limit}${filterQuery}`)
+            .then(response => response.json())
+            .then(data => {
+                if (data.movies) {
+                    displayMovies(data.movies);  // Display filtered movies
+                    currentPage = data.page;
+                    totalPages = data.total_pages;
+                    document.getElementById('pagination-info').textContent = `Page ${currentPage} of ${totalPages}`;
+                } else {
+                    // Handle case when no movies are returned (e.g., no matching movies for selected filters)
+                    document.getElementById('response-body').innerHTML = '<tr><td colspan="7">No movies found for the selected filters.</td></tr>';
+                }
+            })
+            .catch(error => console.error('Error fetching all movies:', error));
+    }
+
+    // Function to Apply Filters and Get Filtered Movies
+    function applyFilters() {
+        // Get the selected genre as a single value
+        const genres = document.getElementById('filter-genres').value;
+
+        // Wrap the selected genre in an array (even if it's just one genre)
+        const genresArray = genres !== 'all' ? [genres] : null;
+
+        const country = document.getElementById('filter-country').value;
+        const yearMin = document.getElementById('filter-year-min').value;
+        const yearMax = document.getElementById('filter-year-max').value;
+
+        // Construct the filters object
+        const filters = {
+            genres: genresArray,
+            country: country !== 'all' ? country : null,
+            yearMin: yearMin ? parseInt(yearMin) : null,
+            yearMax: yearMax ? parseInt(yearMax) : null
         };
 
-        fetch(`${apiUrl}/movies?id=${movieID}`, {
-            method: "PUT",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(formData),
-        })
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
+        // Save filters to activeFilters and fetch movies with the applied filters
+        activeFilters = filters;
+        // Debugging: Check the filters being sent
+        console.log("Filters being sent:", filters);
+        getAllMovies(1, filters);  // Fetch movies with the applied filters
     }
 
-    function getMovies() {
-        fetch(`${apiUrl}/movies`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
+
+
+    // Function to Display Movies
+    function displayMovies(movies) {
+        const tableBody = document.getElementById('response-body');
+        tableBody.innerHTML = '';
+
+        if (movies.length === 0) {
+            tableBody.innerHTML = '<tr><td colspan="7">No movies found.</td></tr>';
+            return;
+        }
+
+        movies.forEach(movie => {
+            const row = document.createElement('tr');
+            const genres = movie.genres && Array.isArray(movie.genres) ? movie.genres.join(', ') : 'N/A';
+            row.innerHTML = `\
+                <td>${movie.id}</td>\
+                <td>${movie.title}</td>\
+                <td>${movie.director}</td>\
+                <td>${movie.country}</td>\
+                <td>${genres}</td>\
+                <td>${movie.release_year}</td>\
+                <td>${movie.description}</td>`;
+            tableBody.appendChild(row);
+        });
+
+        document.getElementById('movie-table').style.display = 'table';
     }
 
-    function getMovieByID(event) {
-        event.preventDefault();
-        const id = document.getElementById("movieID").value;
-        fetch(`${apiUrl}/movies?id=${id}`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
+
+    // Pagination Functions
+    function previousPage() {
+        if (currentPage > 1) {
+            getAllMovies(currentPage - 1, activeFilters);  // Pass activeFilters to retain the state
+        }
     }
 
-    function createMovie(event) {
-        event.preventDefault();
-        const formData = {
-            title: document.getElementById("title").value,
-            director: document.getElementById("director").value,
-            country: document.getElementById("country").value,
-            genres: document.getElementById("genres").value.split(","),
-            release_year: parseInt(document.getElementById("releaseYear").value),
-            description: document.getElementById("description").value,
-        };
-
-        fetch(`${apiUrl}/movies`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(formData),
-        }).then(res => res.json()).then(showResponse).catch(console.error);
+    function nextPage() {
+        if (currentPage < totalPages) {
+            getAllMovies(currentPage + 1, activeFilters);  // Pass activeFilters to retain the state
+        }
     }
 
-    function deleteMovie(event) {
-        event.preventDefault();
-        const id = document.getElementById("deleteMovieID").value;
-        fetch(`${apiUrl}/movies?id=${id}`, {
-            method: "DELETE",
-        }).then(res => res.json()).then(showResponse).catch(console.error);
+    // Sorting Function
+    function sortMovies(field) {
+        if (sortField === field) {
+            sortOrder = sortOrder === 'asc' ? 'desc' : 'asc';
+        } else {
+            sortField = field;
+            sortOrder = 'asc';
+        }
+        activeFilters.sort = sortField;  // Include sort field
+        activeFilters.order = sortOrder;  // Include sort order
+        getAllMovies(currentPage, activeFilters);
     }
 
-    function getAllUsers() {
-        fetch(`${apiUrl}/users`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
-    }
-
-    function getUserByID(event) {
-        event.preventDefault();
-        const id = document.getElementById("userID").value;
-        fetch(`${apiUrl}/users?id=${id}`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
-    }
-
-    function deleteUser(event) {
-        event.preventDefault();
-        const id = document.getElementById("deleteUserID").value;
-        fetch(`${apiUrl}/users?id=${id}`, {
-            method: "DELETE",
-        }).then(res => res.json()).then(showResponse).catch(console.error);
-    }
+    // Load the movies when the page loads with initial filters
+    getAllMovies(1, activeFilters);
 </script>
 </body>
 </html>
