--- a/static/signup.html
+++ b/static/signup.html
@@ -35,7 +35,46 @@
             <p>Already have an account? <a class="text-dark" href="login.html">Login</a></p>
         </div>
     </div>
-    <script src="scripts/signup.js"></script>
+    <script>
+        document.getElementById('signupForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent default form submission
+
+            const email = document.getElementById('email').value;
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            const userData = {
+                email: email,
+                username: username,
+                password: password,
+            };
+
+            fetch('http://localhost:8080/signup', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(userData),
+            })
+                .then((response) => {
+                    if (!response.ok) {
+                        return response.json().then((data) => {
+                            throw new Error(data.message || 'Failed to sign up');
+                        });
+                    }
+                    return response.json();
+                })
+                .then((data) => {
+                    alert(data.message); // Show success message
+                    window.location.href = '/login.html'; // Redirect to login page
+                })
+                .catch((error) => {
+                    console.error('Error:', error.message);
+                    alert('Error: ' + error.message);
+                });
+        });
+
+    </script>
 </body>
 </html>
     
