--- a/static/login.html
+++ b/static/login.html
@@ -33,7 +33,7 @@
     </div>
     <script>
         document.getElementById("loginForm").addEventListener("submit", async function (event) {
-            event.preventDefault(); // Prevent the default form submission
+            event.preventDefault();
 
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
@@ -47,18 +47,22 @@
                     body: JSON.stringify({ email, password }),
                 });
 
-                // Check for HTTP errors
                 if (!response.ok) {
-                    const errorText = await response.text(); // Read the response as plain text
-                    throw new Error(errorText.trim()); // Pass the error to the catch block
+                    const errorText = await response.text();
+                    throw new Error(errorText.trim());
                 }
 
-                const data = await response.json(); // Parse the JSON response
-                document.cookie = `userToken=${data.token}; path=/`; // Store the token in a cookie
-                window.location.href = "index.html"; // Redirect to the main page
+                const data = await response.json();
+                document.cookie = `userToken=${data.token}; path=/`;
+                if (data.admin){
+                    window.location.href="admin.html"
+                }
+                else{
+                    window.location.href = "index.html";
+                }
             } catch (error) {
                 console.error("Error:", error.message);
-                alert(error.message); // Display a friendly error message to the user
+                alert(error.message);
             }
         });
 
