--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
             color: #fff;
         }
         .banner {
-            background: url('static/banner.png') no-repeat center center;
+            background: url("static/banner.png") no-repeat center center;
             background-size: cover;
             height: 575px;
             align-items: center;
@@ -80,7 +80,7 @@
                             <div class="card-text text-center">Parasite</div>
                         </a>
                     </div>
-                    
+
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2">
                     <div class="card bg-secondary p-1 movie ">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>    
+        </div>
     </section>
     <section>
         <div class="container p-4">
@@ -136,10 +136,10 @@
                             <div class="card-text text-center">The Skin I Live in</div>
                         </a>
                     </div>
-                    
+
                 </div>
             </div>
-        </div>    
+        </div>
     </section>
     <footer class="bg-dark py-3">
         <div class="text-center text-decoration-none text-white">
@@ -148,7 +148,6 @@
         </div>
     </footer>
 <script>
-    // Helper function to get a cookie by name
     function getCookie(name) {
         const cookies = document.cookie.split(';');
         for (let cookie of cookies) {
@@ -190,7 +189,42 @@
         }
     }
 
-    document.addEventListener('DOMContentLoaded', updateNavButtons);
+    // Add the fetch snippet here
+    document.addEventListener('DOMContentLoaded', () => {
+        // Get the token from the cookie
+        const token = document.cookie
+            .split('; ')
+            .find(row => row.startsWith('userToken='))
+            ?.split('=')[1];
+
+        if (!token) {
+            window.location.href = "/login.html";
+            return;
+        }
+
+        fetch("/index.html", {
+            headers: {
+                "Authorization": `Bearer ${token}`,
+            },
+        })
+            .then(response => {
+                if (!response.ok) {
+                    if (response.status === 401 || response.status === 403) {
+                        window.location.href = "/login.html"; // Redirect to login page
+                    }
+                    throw new Error("Access denied");
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.body.innerHTML = html; // Render the protected page
+            })
+            .catch(error => {
+                console.error("Error:", error);
+            });
+
+        updateNavButtons();
+    });
 </script>
 
 </body>
